--- a/fnn.ipynb
+++ b/fnn.ipynb
@@ -2,10 +2,122 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting pandas\n",
+      "  Obtaining dependency information for pandas from https://files.pythonhosted.org/packages/a8/44/d9502bf0ed197ba9bf1103c9867d5904ddcaf869e52329787fc54ed70cc8/pandas-2.2.3-cp311-cp311-macosx_10_9_x86_64.whl.metadata\n",
+      "  Downloading pandas-2.2.3-cp311-cp311-macosx_10_9_x86_64.whl.metadata (89 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m89.9/89.9 kB\u001b[0m \u001b[31m1.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hCollecting numpy>=1.23.2 (from pandas)\n",
+      "  Obtaining dependency information for numpy>=1.23.2 from https://files.pythonhosted.org/packages/e9/b5/306ac6ee3f8f0c51abd3664ee8a9b8e264cbf179a860674827151ecc0a9c/numpy-2.2.0-cp311-cp311-macosx_14_0_x86_64.whl.metadata\n",
+      "  Downloading numpy-2.2.0-cp311-cp311-macosx_14_0_x86_64.whl.metadata (62 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m62.0/62.0 kB\u001b[0m \u001b[31m1.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: python-dateutil>=2.8.2 in /Users/alidaeihagh/Library/Python/3.11/lib/python/site-packages (from pandas) (2.9.0.post0)\n",
+      "Collecting pytz>=2020.1 (from pandas)\n",
+      "  Obtaining dependency information for pytz>=2020.1 from https://files.pythonhosted.org/packages/11/c3/005fcca25ce078d2cc29fd559379817424e94885510568bc1bc53d7d5846/pytz-2024.2-py2.py3-none-any.whl.metadata\n",
+      "  Using cached pytz-2024.2-py2.py3-none-any.whl.metadata (22 kB)\n",
+      "Collecting tzdata>=2022.7 (from pandas)\n",
+      "  Obtaining dependency information for tzdata>=2022.7 from https://files.pythonhosted.org/packages/a6/ab/7e5f53c3b9d14972843a647d8d7a853969a58aecc7559cb3267302c94774/tzdata-2024.2-py2.py3-none-any.whl.metadata\n",
+      "  Downloading tzdata-2024.2-py2.py3-none-any.whl.metadata (1.4 kB)\n",
+      "Requirement already satisfied: six>=1.5 in /Users/alidaeihagh/Library/Python/3.11/lib/python/site-packages (from python-dateutil>=2.8.2->pandas) (1.17.0)\n",
+      "Downloading pandas-2.2.3-cp311-cp311-macosx_10_9_x86_64.whl (12.6 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m12.6/12.6 MB\u001b[0m \u001b[31m26.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hDownloading numpy-2.2.0-cp311-cp311-macosx_14_0_x86_64.whl (6.9 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m6.9/6.9 MB\u001b[0m \u001b[31m18.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hUsing cached pytz-2024.2-py2.py3-none-any.whl (508 kB)\n",
+      "Downloading tzdata-2024.2-py2.py3-none-any.whl (346 kB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m346.6/346.6 kB\u001b[0m \u001b[31m9.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0mta \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hInstalling collected packages: pytz, tzdata, numpy, pandas\n",
+      "Successfully installed numpy-2.2.0 pandas-2.2.3 pytz-2024.2 tzdata-2024.2\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.2.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.3.1\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip3.11 install --upgrade pip\u001b[0m\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Collecting scikit-learn\n",
+      "  Obtaining dependency information for scikit-learn from https://files.pythonhosted.org/packages/ff/91/609961972f694cb9520c4c3d201e377a26583e1eb83bc5a334c893729214/scikit_learn-1.5.2-cp311-cp311-macosx_10_9_x86_64.whl.metadata\n",
+      "  Downloading scikit_learn-1.5.2-cp311-cp311-macosx_10_9_x86_64.whl.metadata (13 kB)\n",
+      "Requirement already satisfied: numpy>=1.19.5 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from scikit-learn) (2.2.0)\n",
+      "Collecting scipy>=1.6.0 (from scikit-learn)\n",
+      "  Obtaining dependency information for scipy>=1.6.0 from https://files.pythonhosted.org/packages/5e/fc/9f1413bef53171f379d786aabc104d4abeea48ee84c553a3e3d8c9f96a9c/scipy-1.14.1-cp311-cp311-macosx_14_0_x86_64.whl.metadata\n",
+      "  Downloading scipy-1.14.1-cp311-cp311-macosx_14_0_x86_64.whl.metadata (60 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m60.8/60.8 kB\u001b[0m \u001b[31m1.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hCollecting joblib>=1.2.0 (from scikit-learn)\n",
+      "  Obtaining dependency information for joblib>=1.2.0 from https://files.pythonhosted.org/packages/91/29/df4b9b42f2be0b623cbd5e2140cafcaa2bef0759a00b7b70104dcfe2fb51/joblib-1.4.2-py3-none-any.whl.metadata\n",
+      "  Downloading joblib-1.4.2-py3-none-any.whl.metadata (5.4 kB)\n",
+      "Collecting threadpoolctl>=3.1.0 (from scikit-learn)\n",
+      "  Obtaining dependency information for threadpoolctl>=3.1.0 from https://files.pythonhosted.org/packages/4b/2c/ffbf7a134b9ab11a67b0cf0726453cedd9c5043a4fe7a35d1cefa9a1bcfb/threadpoolctl-3.5.0-py3-none-any.whl.metadata\n",
+      "  Downloading threadpoolctl-3.5.0-py3-none-any.whl.metadata (13 kB)\n",
+      "Downloading scikit_learn-1.5.2-cp311-cp311-macosx_10_9_x86_64.whl (12.1 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m12.1/12.1 MB\u001b[0m \u001b[31m32.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hDownloading joblib-1.4.2-py3-none-any.whl (301 kB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m301.8/301.8 kB\u001b[0m \u001b[31m7.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m:00:01\u001b[0m\n",
+      "\u001b[?25hDownloading scipy-1.14.1-cp311-cp311-macosx_14_0_x86_64.whl (25.5 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m25.5/25.5 MB\u001b[0m \u001b[31m17.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hDownloading threadpoolctl-3.5.0-py3-none-any.whl (18 kB)\n",
+      "Installing collected packages: threadpoolctl, scipy, joblib, scikit-learn\n",
+      "Successfully installed joblib-1.4.2 scikit-learn-1.5.2 scipy-1.14.1 threadpoolctl-3.5.0\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.2.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.3.1\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip3.11 install --upgrade pip\u001b[0m\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Collecting torch\n",
+      "  Obtaining dependency information for torch from https://files.pythonhosted.org/packages/3f/14/e105b8ef6d324e789c1589e95cb0ab63f3e07c2216d68b1178b7c21b7d2a/torch-2.2.2-cp311-none-macosx_10_9_x86_64.whl.metadata\n",
+      "  Downloading torch-2.2.2-cp311-none-macosx_10_9_x86_64.whl.metadata (25 kB)\n",
+      "Collecting filelock (from torch)\n",
+      "  Obtaining dependency information for filelock from https://files.pythonhosted.org/packages/b9/f8/feced7779d755758a52d1f6635d990b8d98dc0a29fa568bbe0625f18fdf3/filelock-3.16.1-py3-none-any.whl.metadata\n",
+      "  Downloading filelock-3.16.1-py3-none-any.whl.metadata (2.9 kB)\n",
+      "Requirement already satisfied: typing-extensions>=4.8.0 in /Users/alidaeihagh/Library/Python/3.11/lib/python/site-packages (from torch) (4.12.2)\n",
+      "Collecting sympy (from torch)\n",
+      "  Obtaining dependency information for sympy from https://files.pythonhosted.org/packages/99/ff/c87e0622b1dadea79d2fb0b25ade9ed98954c9033722eb707053d310d4f3/sympy-1.13.3-py3-none-any.whl.metadata\n",
+      "  Downloading sympy-1.13.3-py3-none-any.whl.metadata (12 kB)\n",
+      "Collecting networkx (from torch)\n",
+      "  Obtaining dependency information for networkx from https://files.pythonhosted.org/packages/b9/54/dd730b32ea14ea797530a4479b2ed46a6fb250f682a9cfb997e968bf0261/networkx-3.4.2-py3-none-any.whl.metadata\n",
+      "  Downloading networkx-3.4.2-py3-none-any.whl.metadata (6.3 kB)\n",
+      "Collecting jinja2 (from torch)\n",
+      "  Obtaining dependency information for jinja2 from https://files.pythonhosted.org/packages/31/80/3a54838c3fb461f6fec263ebf3a3a41771bd05190238de3486aae8540c36/jinja2-3.1.4-py3-none-any.whl.metadata\n",
+      "  Downloading jinja2-3.1.4-py3-none-any.whl.metadata (2.6 kB)\n",
+      "Collecting fsspec (from torch)\n",
+      "  Obtaining dependency information for fsspec from https://files.pythonhosted.org/packages/c6/b2/454d6e7f0158951d8a78c2e1eb4f69ae81beb8dca5fee9809c6c99e9d0d0/fsspec-2024.10.0-py3-none-any.whl.metadata\n",
+      "  Downloading fsspec-2024.10.0-py3-none-any.whl.metadata (11 kB)\n",
+      "Collecting MarkupSafe>=2.0 (from jinja2->torch)\n",
+      "  Obtaining dependency information for MarkupSafe>=2.0 from https://files.pythonhosted.org/packages/6b/28/bbf83e3f76936960b850435576dd5e67034e200469571be53f69174a2dfd/MarkupSafe-3.0.2-cp311-cp311-macosx_10_9_universal2.whl.metadata\n",
+      "  Downloading MarkupSafe-3.0.2-cp311-cp311-macosx_10_9_universal2.whl.metadata (4.0 kB)\n",
+      "Collecting mpmath<1.4,>=1.1.0 (from sympy->torch)\n",
+      "  Obtaining dependency information for mpmath<1.4,>=1.1.0 from https://files.pythonhosted.org/packages/43/e3/7d92a15f894aa0c9c4b49b8ee9ac9850d6e63b03c9c32c0367a13ae62209/mpmath-1.3.0-py3-none-any.whl.metadata\n",
+      "  Downloading mpmath-1.3.0-py3-none-any.whl.metadata (8.6 kB)\n",
+      "Downloading torch-2.2.2-cp311-none-macosx_10_9_x86_64.whl (150.8 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m150.8/150.8 MB\u001b[0m \u001b[31m5.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m:00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hDownloading filelock-3.16.1-py3-none-any.whl (16 kB)\n",
+      "Downloading fsspec-2024.10.0-py3-none-any.whl (179 kB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m179.6/179.6 kB\u001b[0m \u001b[31m4.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0mta \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hDownloading jinja2-3.1.4-py3-none-any.whl (133 kB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m133.3/133.3 kB\u001b[0m \u001b[31m2.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m:00:01\u001b[0m\n",
+      "\u001b[?25hDownloading networkx-3.4.2-py3-none-any.whl (1.7 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.7/1.7 MB\u001b[0m \u001b[31m13.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hDownloading sympy-1.13.3-py3-none-any.whl (6.2 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m6.2/6.2 MB\u001b[0m \u001b[31m19.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hDownloading MarkupSafe-3.0.2-cp311-cp311-macosx_10_9_universal2.whl (14 kB)\n",
+      "Downloading mpmath-1.3.0-py3-none-any.whl (536 kB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m536.2/536.2 kB\u001b[0m \u001b[31m5.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hInstalling collected packages: mpmath, sympy, networkx, MarkupSafe, fsspec, filelock, jinja2, torch\n",
+      "Successfully installed MarkupSafe-3.0.2 filelock-3.16.1 fsspec-2024.10.0 jinja2-3.1.4 mpmath-1.3.0 networkx-3.4.2 sympy-1.13.3 torch-2.2.2\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.2.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.3.1\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip3.11 install --upgrade pip\u001b[0m\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
+    "%pip install pandas\n",
+    "%pip install scikit-learn\n",
+    "%pip install torch\n",
+    "\n",
     "labels = [\n",
     "    'game_id',\n",
     "    'team_id_home',\n",
@@ -92,23 +204,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "    wl  pts_for  reb_for  pts_against  reb_against  team_hist_wl   \n",
-      "0  0.7    101.1     42.4         95.3         37.2           0.4  \\\n",
+      "    wl  pts_for  pts_against  team_hist_wl  team_hist_pts_for  \\\n",
+      "0  0.7    101.1         95.3           0.4               93.4   \n",
       "\n",
-      "   team_hist_pts_for  team_hist_reb_for  team_hist_pts_against   \n",
-      "0               93.4               41.4                   98.6  \\\n",
+      "   team_hist_pts_against  \n",
+      "0                   98.6  \n",
+      "Training data shape: (24282, 6) (24282,)\n",
+      "Testing data shape: (4608, 6) (4608,)\n",
+      "Sample of training features:\n",
+      "         wl     pts_for  pts_against  team_hist_wl  team_hist_pts_for  \\\n",
+      "0  0.700000  101.100000    95.300000           0.4               93.4   \n",
+      "1  0.571429   93.571429    94.285714           0.8              101.7   \n",
+      "2  0.777778  101.111111    96.888889           0.2               89.0   \n",
+      "3  0.700000   95.000000    94.400000           0.5               94.6   \n",
+      "4  0.600000   94.300000    93.200000           0.6               84.7   \n",
       "\n",
-      "   team_hist_reb_against  \n",
-      "0                   43.3  \n",
-      "Training data shape: (24282, 10) (24282,)\n",
-      "Testing data shape: (4608, 10) (4608,)\n"
+      "   team_hist_pts_against  \n",
+      "0                   98.6  \n",
+      "1                   93.7  \n",
+      "2                  100.0  \n",
+      "3                   94.4  \n",
+      "4                   85.1  \n",
+      "\n",
+      "Shape: (24282, 6)\n",
+      "\n",
+      "Feature information:\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 24282 entries, 0 to 24281\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column                 Non-Null Count  Dtype  \n",
+      "---  ------                 --------------  -----  \n",
+      " 0   wl                     24282 non-null  float64\n",
+      " 1   pts_for                24282 non-null  float64\n",
+      " 2   pts_against            24282 non-null  float64\n",
+      " 3   team_hist_wl           24282 non-null  float64\n",
+      " 4   team_hist_pts_for      24282 non-null  float64\n",
+      " 5   team_hist_pts_against  24282 non-null  float64\n",
+      "dtypes: float64(6)\n",
+      "memory usage: 1.3 MB\n",
+      "None\n",
+      "\n",
+      "Feature statistics:\n",
+      "                 wl       pts_for   pts_against  team_hist_wl  \\\n",
+      "count  24282.000000  24282.000000  24282.000000  24282.000000   \n",
+      "mean       0.496640     98.574973     98.689705      0.499604   \n",
+      "std        0.218919      6.695258      6.706080      0.209168   \n",
+      "min        0.000000     75.100000     74.700000      0.000000   \n",
+      "25%        0.300000     94.100000     94.100000      0.375000   \n",
+      "50%        0.500000     98.300000     98.444444      0.500000   \n",
+      "75%        0.666667    102.900000    103.000000      0.666667   \n",
+      "max        1.000000    125.900000    126.200000      1.000000   \n",
+      "\n",
+      "       team_hist_pts_for  team_hist_pts_against  \n",
+      "count       24282.000000           24282.000000  \n",
+      "mean           99.795947              99.809262  \n",
+      "std             7.282704               7.266039  \n",
+      "min            73.000000              69.000000  \n",
+      "25%            94.800000              94.800000  \n",
+      "50%            99.300000              99.500000  \n",
+      "75%           104.500000             104.500000  \n",
+      "max           129.100000             134.500000  \n",
+      "\n",
+      "Sample of target values (wl_home):\n",
+      "0    1\n",
+      "1    1\n",
+      "2    1\n",
+      "3    0\n",
+      "4    1\n",
+      "Name: wl_home, dtype: int64\n",
+      "\n",
+      "Unique values in target: [1 0]\n",
+      "Value counts in target:\n",
+      " wl_home\n",
+      "1    14496\n",
+      "0     9786\n",
+      "Name: count, dtype: int64\n"
      ]
     }
    ],
@@ -147,7 +324,26 @@
     "\n",
     "# Verify results\n",
     "print(\"Training data shape:\", X_train_normalized.shape, y_train.shape)\n",
-    "print(\"Testing data shape:\", X_test_normalized.shape, y_test.shape)\n"
+    "print(\"Testing data shape:\", X_test_normalized.shape, y_test.shape)\n",
+    "\n",
+    "# Look at first few rows of training features\n",
+    "print(\"Sample of training features:\")\n",
+    "print(X_train.head())\n",
+    "print(\"\\nShape:\", X_train.shape)\n",
+    "\n",
+    "# Look at feature names and their data types\n",
+    "print(\"\\nFeature information:\")\n",
+    "print(X_train.info())\n",
+    "\n",
+    "# Get basic statistics of each feature\n",
+    "print(\"\\nFeature statistics:\")\n",
+    "print(X_train.describe())\n",
+    "\n",
+    "# Look at some target values (wl_home)\n",
+    "print(\"\\nSample of target values (wl_home):\")\n",
+    "print(y_train.head())\n",
+    "print(\"\\nUnique values in target:\", y_train.unique())\n",
+    "print(\"Value counts in target:\\n\", y_train.value_counts())\n"
    ]
   },
   {
@@ -560,7 +756,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
