Added normalization script for RNN data

--- a/preprocessed_data/generate.ipynb
+++ b/preprocessed_data/generate.ipynb
@@ -57982,6 +57982,120 @@
     "with open('rnn_game_objects.pkl', 'wb') as f:\n",
     "    pickle.dump(game_objects, f)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# NORMALIZE THE GAME DATA\n",
+    "GLOBAL_FEATURE_MIN_MAX = {\n",
+    "    'is_regular_season' : [0, 1],\n",
+    "    'is_playoffs' : [0, 1],\n",
+    "    'is_pre_season' : [0, 1],\n",
+    "    'days_ago' : [1, 1825],\n",
+    "    'days_ago' : [1, 1825],\n",
+    "    'games_ago' : [1, 10],\n",
+    "    'is_home_team' : [0, 1],\n",
+    "    'is_regular_season_matchup' : [0, 1],\n",
+    "    'is_playoffs_matchup' : [0, 1],\n",
+    "    'is_pre_season_matchup' : [0, 1],\n",
+    "    'wl' : [0, 1],\n",
+    "    'pts_for' : [49, 176],\n",
+    "    'fg_pct_for' : [0.234, 0.693],\n",
+    "    'fg3_pct_for' : [0, 1],\n",
+    "    'fg3m_for' : [0, 29],\n",
+    "    'ft_pct_for' : [0.143, 1],\n",
+    "    'ftm_for' : [0, 52],\n",
+    "    'reb_for' : [0, 81],\n",
+    "    'ast_for' : [4, 50],\n",
+    "    'stl_for' : [0, 27],\n",
+    "    'blk_for' : [0, 23],\n",
+    "    'tov_for' : [0, 38],\n",
+    "    'pts_against' : [49, 176],\n",
+    "    'fg_pct_against' : [0.234, 0.693],\n",
+    "    'fg3_pct_against' : [0, 1],\n",
+    "    'fg3m_against' : [0, 29],\n",
+    "    'ft_pct_against' : [0.143, 1],\n",
+    "    'ftm_against' : [0, 52],\n",
+    "    'reb_against' : [0, 81],\n",
+    "    'ast_against' : [4, 50],\n",
+    "    'stl_against' : [0, 27],\n",
+    "    'blk_against' : [0, 23],\n",
+    "    'tov_against' : [0, 38]\n",
+    "}\n",
+    "\n",
+    "\n",
+    "# load in file from pickle\n",
+    "import pickle\n",
+    "with open('rnn_game_objects.pkl', 'rb') as f:\n",
+    "    game_objects = pickle.load(f)\n",
+    "\n",
+    "# print first row for verification\n",
+    "game : GameData = game_objects[0]\n",
+    "print(\"First row of game data:\")\n",
+    "print(\"game_id:\", game.game_id)\n",
+    "print(\"game_date:\", game.game_date)\n",
+    "print(\"is_regular_season:\", game.is_regular_season)\n",
+    "print(\"is_playoffs:\", game.is_playoffs)\n",
+    "print(\"is_pre_season:\", game.is_pre_season)\n",
+    "print(\"matchups:\", game.matchups)\n",
+    "# print(\"team_history:\", game.team_history)\n",
+    "# print(\"opponent_history:\", game.opponent_history)\n",
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Normalize all rows\n",
+    "# (x - min) / (max - min)\n",
+    "def normalize_game_data(game_objects, global_feature_min_max, historical_features):\n",
+    "    # Iterate through each game object and normalize the numeric features\n",
+    "    for n, game in enumerate(game_objects):  # Use enumerate to get index and object\n",
+    "        print(f\"Normalizing game {n + 1}/{len(game_objects)}\")\n",
+    "\n",
+    "        # loop thorugh matchups\n",
+    "        for i, row in game.matchups.iterrows():\n",
+    "            for key, value in row.items():\n",
+    "                if key in global_feature_min_max:\n",
+    "                    min_val = global_feature_min_max[key][0]\n",
+    "                    max_val = global_feature_min_max[key][1]\n",
+    "                    game.matchups.loc[i, key] = (value - min_val) / (max_val - min_val)\n",
+    "        # loop through team history\n",
+    "        for i, row in game.team_history.iterrows():\n",
+    "            for key, value in row.items():\n",
+    "                if key in global_feature_min_max:\n",
+    "                    min_val = global_feature_min_max[key][0]\n",
+    "                    max_val = global_feature_min_max[key][1]\n",
+    "                    game.team_history.loc[i, key] = (value - min_val) / (max_val - min_val)\n",
+    "        # loop through opponent history\n",
+    "        for i, row in game.opponent_history.iterrows():\n",
+    "            for key, value in row.items():\n",
+    "                if key in global_feature_min_max:\n",
+    "                    min_val = global_feature_min_max[key][0]\n",
+    "                    max_val = global_feature_min_max[key][1]\n",
+    "                    game.opponent_history.loc[i, key] = (value - min_val) / (max_val - min_val)\n",
+    "                            \n",
+    "    return game_objects\n",
+    "\n",
+    "\n",
+    "# Normalize the game data\n",
+    "game_objects = normalize_game_data(game_objects, GLOBAL_FEATURE_MIN_MAX, historical_features)\n",
+    "\n",
+    "# print first row for verification\n",
+    "game : GameData = game_objects[0]\n",
+    "print(\"First row of game data:\")\n",
+    "print(\"game_id:\", game.game_id)\n",
+    "print(\"game_date:\", game.game_date)\n",
+    "print(\"is_regular_season:\", game.is_regular_season)\n",
+    "print(\"is_playoffs:\", game.is_playoffs)\n",
+    "print(\"is_pre_season:\", game.is_pre_season)\n",
+    "print(\"matchups:\", game.matchups)\n",
+    "\n",
+    "\n",
+    "norm_game_objects = game_objects\n",
+    "with open('norm_rnn_game_objects.pkl', 'wb') as f:\n",
+    "    pickle.dump(norm_game_objects, f)"
+   ]
   }
  ],
  "metadata": {
