Added train accuracy print outs to fnn

--- a/preprocessed_data/fnn_v2.ipynb
+++ b/preprocessed_data/fnn_v2.ipynb
@@ -538,12 +538,6 @@
     "# print first row and num of features\n",
     "print(X_train.head(1))\n",
     "\n",
-    "# TODO create new features by combining existing features\n",
-    "# X_train['pts_diff'] = X_train['pts_for'] - X_train['pts_against']\n",
-    "# X_test['pts_diff'] = X_test['pts_for'] - X_test['pts_against']\n",
-    "# features.append('pts_diff')\n",
-    "\n",
-    "\n",
     "\n",
     "# Normalize the feature data\n",
     "scaler = MinMaxScaler()\n",
@@ -758,6 +752,18 @@
     "    # Evaluate the model\n",
     "    model.eval()\n",
     "    with torch.no_grad():\n",
+    "        y_train_pred = []\n",
+    "        y_train_true = []\n",
+    "        for X_batch, y_batch in train_loader:\n",
+    "            outputs = model(X_batch)\n",
+    "            y_train_pred.extend(outputs.numpy())\n",
+    "            y_train_true.extend(y_batch.numpy())\n",
+    "        \n",
+    "        y_train_pred_binary = [1 if pred > 0.5 else 0 for pred in y_train_pred]\n",
+    "        train_accuracy = accuracy_score(y_train_true, y_train_pred_binary)\n",
+    "        print(f\"Train Accuracy: {train_accuracy:.2%}\")\n",
+    "\n",
+    "\n",
     "        y_pred = []\n",
     "        y_true = []\n",
     "        for X_batch, y_batch in test_loader:\n",
