Evaluation changes RNN

--- a/preprocessed_data/generate.ipynb
+++ b/preprocessed_data/generate.ipynb
@@ -28912,7 +28912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -57729,29 +57729,29 @@
       "is_regular_season: 1\n",
       "is_playoffs: 0\n",
       "is_pre_season: 0\n",
-      "matchups:        days_ago  games_ago  is_home_team  is_regular_season_matchup   \n",
-      "14205        62          1             0                          1  \\\n",
+      "matchups:        days_ago  games_ago  is_home_team  is_regular_season_matchup  \\\n",
+      "14205        62          1             0                          1   \n",
       "14206       277          2             1                          1   \n",
       "14207       296          3             0                          1   \n",
       "14208       332          4             1                          1   \n",
       "14209       342          5             0                          1   \n",
       "\n",
-      "       is_playoffs_matchup  is_pre_season_matchup  wl  pts_for  fg_pct_for   \n",
-      "14205                    0                      0   1      106       0.489  \\\n",
+      "       is_playoffs_matchup  is_pre_season_matchup  wl  pts_for  fg_pct_for  \\\n",
+      "14205                    0                      0   1      106       0.489   \n",
       "14206                    0                      0   1      122       0.598   \n",
       "14207                    0                      0   1      100       0.483   \n",
       "14208                    0                      0   1      102       0.563   \n",
       "14209                    0                      0   1       92       0.494   \n",
       "\n",
-      "       fg3_pct_for  ...  fg_pct_against  fg3_pct_against  fg3m_against   \n",
-      "14205        0.545  ...           0.459            0.222             2  \\\n",
+      "       fg3_pct_for  ...  fg_pct_against  fg3_pct_against  fg3m_against  \\\n",
+      "14205        0.545  ...           0.459            0.222             2   \n",
       "14206        0.500  ...           0.371            0.000             0   \n",
       "14207        0.500  ...           0.372            0.263             5   \n",
       "14208        0.667  ...           0.381            0.313             5   \n",
       "14209        0.286  ...           0.397            0.350             7   \n",
       "\n",
-      "       ft_pct_against  ftm_against  reb_against  ast_against  stl_against   \n",
-      "14205           0.700           28           38           18            9  \\\n",
+      "       ft_pct_against  ftm_against  reb_against  ast_against  stl_against  \\\n",
+      "14205           0.700           28           38           18            9   \n",
       "14206           0.809           38           35           13            6   \n",
       "14207           0.657           23           47           21            2   \n",
       "14208           0.696           16           36           19            6   \n",
@@ -57765,8 +57765,8 @@
       "14209            1           16  \n",
       "\n",
       "[5 rows x 29 columns]\n",
-      "team_history:        days_ago  games_ago  is_home_team  is_regular_season_matchup   \n",
-      "14672         2          1             1                          1  \\\n",
+      "team_history:        days_ago  games_ago  is_home_team  is_regular_season_matchup  \\\n",
+      "14672         2          1             1                          1   \n",
       "14673         4          2             1                          1   \n",
       "14674         6          3             1                          1   \n",
       "14675         9          4             1                          1   \n",
@@ -57777,8 +57777,8 @@
       "14680        17          9             0                          1   \n",
       "14681        20         10             0                          1   \n",
       "\n",
-      "       is_playoffs_matchup  is_pre_season_matchup  wl  pts_for  fg_pct_for   \n",
-      "14672                    0                      0   0       79       0.388  \\\n",
+      "       is_playoffs_matchup  is_pre_season_matchup  wl  pts_for  fg_pct_for  \\\n",
+      "14672                    0                      0   0       79       0.388   \n",
       "14673                    0                      0   1       88       0.403   \n",
       "14674                    0                      0   1      100       0.506   \n",
       "14675                    0                      0   0       92       0.448   \n",
@@ -57789,8 +57789,8 @@
       "14680                    0                      0   1       99       0.463   \n",
       "14681                    0                      0   0       94       0.402   \n",
       "\n",
-      "       fg3_pct_for  ...  fg_pct_against  fg3_pct_against  fg3m_against   \n",
-      "14672        0.167  ...           0.425            0.455             5  \\\n",
+      "       fg3_pct_for  ...  fg_pct_against  fg3_pct_against  fg3m_against  \\\n",
+      "14672        0.167  ...           0.425            0.455             5   \n",
       "14673        0.125  ...           0.413            0.222             2   \n",
       "14674        0.222  ...           0.456            0.500             5   \n",
       "14675        0.200  ...           0.493            0.000             0   \n",
@@ -57801,8 +57801,8 @@
       "14680        0.500  ...           0.368            0.444             4   \n",
       "14681        0.400  ...           0.524            0.273             3   \n",
       "\n",
-      "       ft_pct_against  ftm_against  reb_against  ast_against  stl_against   \n",
-      "14672           0.789           15           54           23            5  \\\n",
+      "       ft_pct_against  ftm_against  reb_against  ast_against  stl_against  \\\n",
+      "14672           0.789           15           54           23            5   \n",
       "14673           0.810           17           50           19            6   \n",
       "14674           0.588           10           41           33            6   \n",
       "14675           0.909           30           33           26           10   \n",
@@ -57826,8 +57826,8 @@
       "14681            4           11  \n",
       "\n",
       "[10 rows x 29 columns]\n",
-      "opponent_history:        days_ago  games_ago  is_home_team  is_regular_season_matchup   \n",
-      "14586         2          1             0                          1  \\\n",
+      "opponent_history:        days_ago  games_ago  is_home_team  is_regular_season_matchup  \\\n",
+      "14586         2          1             0                          1   \n",
       "14587         5          2             0                          1   \n",
       "14588         6          3             0                          1   \n",
       "14589         9          4             0                          1   \n",
@@ -57838,8 +57838,8 @@
       "14594        21          9             0                          1   \n",
       "14595        23         10             0                          1   \n",
       "\n",
-      "       is_playoffs_matchup  is_pre_season_matchup  wl  pts_for  fg_pct_for   \n",
-      "14586                    0                      0   1      114       0.476  \\\n",
+      "       is_playoffs_matchup  is_pre_season_matchup  wl  pts_for  fg_pct_for  \\\n",
+      "14586                    0                      0   1      114       0.476   \n",
       "14587                    0                      0   1      107       0.489   \n",
       "14588                    0                      0   0       95       0.437   \n",
       "14589                    0                      0   1       95       0.443   \n",
@@ -57850,8 +57850,8 @@
       "14594                    0                      0   1       82       0.407   \n",
       "14595                    0                      0   1      111       0.459   \n",
       "\n",
-      "       fg3_pct_for  ...  fg_pct_against  fg3_pct_against  fg3m_against   \n",
-      "14586        0.476  ...           0.378            0.375             6  \\\n",
+      "       fg3_pct_for  ...  fg_pct_against  fg3_pct_against  fg3m_against  \\\n",
+      "14586        0.476  ...           0.378            0.375             6   \n",
       "14587        0.333  ...           0.451            0.077             1   \n",
       "14588        0.300  ...           0.481            0.500             7   \n",
       "14589        0.455  ...           0.440            0.250             4   \n",
@@ -57862,8 +57862,8 @@
       "14594        0.261  ...           0.375            0.250             3   \n",
       "14595        0.478  ...           0.550            0.125             1   \n",
       "\n",
-      "       ft_pct_against  ftm_against  reb_against  ast_against  stl_against   \n",
-      "14586           0.822           37           41           16            5  \\\n",
+      "       ft_pct_against  ftm_against  reb_against  ast_against  stl_against  \\\n",
+      "14586           0.822           37           41           16            5   \n",
       "14587           0.818            9           42           19            6   \n",
       "14588           0.741           20           45           19            8   \n",
       "14589           0.750            9           44           20            5   \n",
@@ -58114,7 +58114,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
