--- a/rnn.ipynb
+++ b/rnn.ipynb
@@ -219,17 +219,27 @@
     "# Quick normalize\n",
     "normalized_games, scaler = quick_normalize(game_objects)\n",
     "\n",
-    "# Split into train/val/test\n",
-    "game_dates = np.array([game.game_date for game in normalized_games])\n",
-    "sorted_indices = np.argsort(game_dates)\n",
-    "normalized_games = [normalized_games[i] for i in sorted_indices]\n",
+    "# Split into train test and validation\n",
+    "baseline_date = pd.to_datetime(\"2000-01-01\")\n",
     "\n",
-    "n_train = int(0.8 * len(normalized_games))\n",
-    "n_val = int(0.10 * len(normalized_games))\n",
+    "train_games = []\n",
+    "val_games = []\n",
+    "test_games = []\n",
     "\n",
-    "train_games = normalized_games[:n_train]\n",
-    "val_games = normalized_games[n_train:n_train + n_val]\n",
-    "test_games = normalized_games[n_train + n_val:]\n",
+    "for game in normalized_games:\n",
+    "    # Convert days since baseline back to a date\n",
+    "    game_date = baseline_date + pd.Timedelta(days=int(game.game_date))\n",
+    "    \n",
+    "    if game_date.year <= 2019: \n",
+    "        train_games.append(game)\n",
+    "    elif game_date.year == 2020:  \n",
+    "        val_games.append(game)\n",
+    "    else:  \n",
+    "        test_games.append(game)\n",
+    "\n",
+    "print(f\"Training games (2001-2019): {len(train_games)}\")\n",
+    "print(f\"Validation games (2020): {len(val_games)}\")\n",
+    "print(f\"Test games (2021-2023): {len(test_games)}\")\n",
     "\n",
     "# Create datasets and dataloaders\n",
     "batch_size = 32\n",
